WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145477
Fix preferences for wireless playback
https://bugs.webkit.org/show_bug.cgi?id=145477
Summary
Fix preferences for wireless playback
Jon Lee
Reported
2015-05-29 15:38:45 PDT
Fix preferences for wireless playback
rdar://problem/21166767
Attachments
Patch
(2.40 KB, patch)
2015-05-29 15:52 PDT
,
Jon Lee
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2015-05-29 15:52:41 PDT
Created
attachment 253927
[details]
Patch
Jon Lee
Comment 2
2015-05-29 16:21:15 PDT
Committed
r185016
: <
http://trac.webkit.org/changeset/185016
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug