Fix preferences for wireless playback https://bugs.webkit.org/show_bug.cgi?id=145477 rdar://problem/21166767

Reviewed by Anders Carlsson.

* UIProcess/API/C/WKPreferences.cpp: Add missing preference calls in C API.
* UIProcess/API/C/WKPreferencesRef.h:

Canonical link: https://commits.webkit.org/163516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185016 268f45cc-cd09-0410-ab3c-d52691b4dbfc